tests/reference/run-integerStringInput_64-3a7e5be.stderr
semantic error: Incompatible format: LFortran Modfile was generated using version '0.58.0-603-gce53df543-dirty', but current LFortran version is '0.58.0-603-gc667b254b-dirty'
 --> tests/errors/integerStringInput_64.f90:2:5
  |
2 |     use, intrinsic :: iso_fortran_env, only: int64
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
